[package]
name = "rust-actix"
version = "0.1.0"
authors = ["Ryuichi Inagaki <ryuichi.inagaki.24@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-service = "1.0.5"

bytes = "0.5.4"
futures = "0.3.5"
env_logger = "0.7.1"

serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
json = "0.12.4"
